Just added handyman and RemodelServices

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -26,7 +27,7 @@
     -->
     <title>MHI Google Site</title>
   </head>
-  <body>
+  <body style="background-color: #d4d4d8">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -38,6 +39,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    --><iframe src="https://embedsocial.com/api/pro_hashtag/5205c3cc00203b17d35563828478152434ba1efe" width="900px" height="1200px" frameborder="0" marginheight="0" marginwidth="0"></iframe>
   </body>
 </html>
